<resources>
    <string name="app_name">Tinkoff Chat App</string>
    <string name="enter_message_hint">Enter Message…</string>
    <string name="send_message_description">Send message</string>
    <string name="stream_name">#%1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_search_channel_fragment">search</string>
    <string name="search_contacts_fragment">Search…</string>
    <string name="users_contacts_screen_search">Users…</string>
    <string name="channels_menu">Channels</string>
    <string name="contacts_menu">People</string>
    <string name="profile_menu">Profile</string>
    <string name="online_is_active">online</string>
    <string name="online_is_not_active">offline</string>
    <string name="online_is_idle">idle</string>
    <string name="subscribed_tab_text">Subscribed…</string>
    <string name="all_streams_tab_text">All streams</string>
    <string name="online_status">online</string>
    <string name="log_out_button_text">Log out</string>
    <string name="back_button_description">back button</string>
    <string name="topic_name">Topic: #%1$s</string>
    <string name="error_text">Error</string>
    <string name="error_profile">An error occurred while loading profile</string>
    <string name="error_streams">An error occurred while loading streams.</string>
    <string name="edit_message">Edit Message</string>
    <string name="delete_message">Delete Message</string>
    <string name="copy_message">Copy Message</string>
    <string name="change_message_topic">Change Message Topic</string>
    <string name="change">Change</string>
    <string name="add_reaction">Add Reaction</string>
    <string name="create_new_stream">Create New Stream</string>
    <string name="stream_name_dialog">Stream Name</string>
    <string name="stream_description_dialog">Stream Description (optional)</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="make_announcement_dialog">Make announcement</string>
    <string name="copy_message_to_clipboard_description">Copy Message To Clipboard</string>
    <string name="select_topic_for_message">Send to:</string>
    <string name="topic_hint">topic</string>
    <string name="enter_new_topic_name">Enter new topic name:</string>
    <string name="enter_topic_name_dialog">Enter topic name</string>
    <string name="select_file_type_dialog">Select file type:</string>
    <string name="photo">Photo</string>
    <string name="document">Documents</string>
    <string name="image">Image</string>
    <string name="docs">Docs</string>
    <string name="tap_to_download">Tap to download</string>
    <string name="no_internet">Internet connection lost!</string>
</resources>