<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_select_file_type_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_file_type_dialog"
        android:textSize="24sp"
        android:layout_margin="8dp"
        />

    <Button
        android:id="@+id/btn_photo_type"
        app:layout_constraintTop_toBottomOf="@id/tv_select_file_type_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image"
        android:tooltipText="Photo"
        android:drawableLeft="@drawable/ic_image_type_dialog"
        android:text="@string/photo"
        android:backgroundTint="@color/secondary_color"/>

    <Button
        android:id="@+id/btn_docs_type"
        app:layout_constraintTop_toBottomOf="@id/tv_select_file_type_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image"
        android:textAlignment="center"
        android:scaleType="fitCenter"
        android:tooltipText="Docs"
        android:text="@string/docs"
        android:drawableLeft="@drawable/ic_docs_type_dialog"
        android:backgroundTint="@color/secondary_color"
        />

</androidx.constraintlayout.widget.ConstraintLayout>