<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="12dp">

    <TextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_stream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_stream_name_dialog"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/stream_name_dialog"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/et_stream_description_dialog"
        app:layout_constraintStart_toStartOf="@+id/et_stream_description_dialog"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dialog" />

    <EditText
        android:id="@+id/et_stream_description_dialog"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/stream_description_dialog"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_stream_name_dialog" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:text="@string/make_announcement_dialog"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_stream_description_dialog" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_announce"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_stream_description_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>