<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:orientation="vertical"
    tools:context=".screens.message.MessagesFragment">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/pb_messages"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_messages_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:text="@string/error_text"
        android:textColor="@color/offline_status"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_toolbar_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/back_button_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back_arrow"
            app:tint="@color/white_text" />

        <TextView
            android:id="@+id/tv_stream_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:textColor="@color/white_text"
            android:textSize="24sp"
            tools:text="#general" />

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/tv_topic_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/topic_background"
        android:gravity="center"
        android:text="@string/stream_name"
        android:textColor="@color/light_light_gray_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/bottom_message_part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_topic_name" />

    <LinearLayout
        android:id="@+id/bottom_message_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_variant"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_message"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="9"
            android:background="@drawable/bg_message_edit"
            android:hint="@string/enter_message_hint"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white_text"
            android:textColorHint="@color/gray_text" />

        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_send_icon"
            android:contentDescription="@string/send_message_description"
            android:src="@drawable/ic_add" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>