<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".screens.contacts.ContactsFragment">

    <LinearLayout
        android:id="@+id/ll_top_search_bar_channels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_variant"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_channels_search"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_weight="9"
            android:background="@color/transparent"
            android:hint="@string/search_contacts_fragment"
            android:importantForAccessibility="no"
            android:importantForAutofill="no"
            android:paddingStart="64dp"
            android:paddingEnd="8dp"
            android:textColor="@color/white_text"
            android:textColorHint="@color/light_light_gray_text"
            android:inputType="text"
            android:textSize="24sp"/>

        <ImageView
            android:id="@+id/search_channels_screen_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="2"
            android:background="@color/transparent"
            android:contentDescription="@string/ic_search_channel_fragment"
            android:src="@drawable/ic_search"
            app:tint="@color/white_text" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_select_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_variant"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_top_search_bar_channels"
        app:tabTextColor="@color/white_text">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribed_tab_text" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_streams_tab_text" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_streams"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tl_select_channel" />

    <TextView
        android:id="@+id/tv_error_streams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_streams"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tl_select_channel"
        app:shimmer_duration="4500">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/shimmer_stream_layout" />
            <include layout="@layout/shimmer_stream_layout" />
            <include layout="@layout/shimmer_stream_layout" />
            <include layout="@layout/shimmer_stream_layout" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>