<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bsd_select_emoji"
    android:padding="8dp">

    <ImageView
        android:id="@+id/bsd_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:importantForAccessibility="no"
        android:src="@drawable/bsd_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/bsd_iv">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_copy_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:contentDescription="@string/copy_message"
                android:src="@drawable/ic_copy_message"
                app:tint="@color/light_light_gray_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/copy_message"
                android:textAlignment="center"
                android:textColor="@color/light_light_gray_text" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_change_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:contentDescription="@string/change_message_topic"
                android:src="@drawable/ic_move_to_topic"
                app:tint="@color/light_light_gray_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/change_message_topic"
                android:textAlignment="center"
                android:textColor="@color/light_light_gray_text" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/ll_first_row">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_edit_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:contentDescription="@string/edit_message"
                android:src="@drawable/ic_edit_message"
                app:tint="@color/light_light_gray_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_message"
                android:textAlignment="center"
                android:textColor="@color/light_light_gray_text" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_delete_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:contentDescription="@string/delete_message"
                android:src="@drawable/ic_delete_message"
                app:tint="@color/light_light_gray_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/delete_message"
                android:textAlignment="center"
                android:textColor="@color/light_light_gray_text" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_helper_bsd"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="4dp"
        app:cardBackgroundColor="@color/bg_bnv"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/ll_second_row" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_emoji_bsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/cv_helper_bsd"
        app:spanCount="7"
        tools:listitem="@layout/single_emoji_item" />

</androidx.constraintlayout.widget.ConstraintLayout>